Details
-
Bug
-
Resolution: Done
-
P1: Critical
-
5.11, 5.12
-
-
a02ea26b469a32fbdcd9ce777dd46aeacc5cd82f (qt/qtbase/dev) 5bd0fc1d5d5e61a54ea191480c2697d1c8e89fe7 (qt/qtbase/5.15)
Description
I/QTestLib(11729): FAIL! : tst_QWindow::exposeEventOnShrink_QTBUG54040() '(window.received(QEvent::Expose) > exposeCount)' returned FALSE. () I/QTestLib(11729): Loc: [D:\projects\qt\clean-dev\src\qtbase\tests\auto\gui\kernel\qwindow\tst_qwindow.cpp(415)]
Attachments
Issue Links
- relates to
-
QTBUG-69157 Android: tst_QWindow::isActive fails
-
- Reported
-
-
QTBUG-69160 Android: tst_QWindow::modalWithChildWindow fails
-
- Reported
-
-
QTBUG-69161 Android: tst_QWindow::modalWindowPosition fails
-
- Reported
-
-
QTBUG-69162 Android: tst_QWindow::modalWindowEnterEventOnHide_QTBUG35109 fails
-
- Reported
-
-
QTBUG-69163 Android: tst_QWindow::modalWindowModallity fails
-
- Reported
-
-
QTBUG-69154 Android: tst_QWindow::setVisible fails
-
- Closed
-
-
QTBUG-69156 Android: tst_QWindow::childWindowPositioning(show) fails
-
- Closed
-
-
QTBUG-69159 Android: tst_QWindow::initialSize fails
-
- Closed
-
-
QTBUG-98120 Fix failing qtbase CI tests for Android
-
- In Progress
-
-
QTBUG-87025 Report Android failing tests in CI
-
- Closed
-
For Gerrit Dashboard: QTBUG-69155 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
233461,2 | Android: Blacklist some cases in tst_qwindow | 5.11 | qt/qtbase | Status: MERGED | +2 | 0 |
316409,7 | [Android] Make sure expose events are emitted after window resize | dev | qt/qtbase | Status: MERGED | +2 | 0 |
318348,2 | [Android] Make sure expose events are emitted after window resize | 5.15 | qt/qtbase | Status: MERGED | +2 | 0 |